lucia-macros/tests/ui/error_enum/unknown_transport.stderr
error: Unknown transport.
 --> tests/ui/error_enum/unknown_transport.rs:4:60
  |
4 | #[lucia_macros::pkg(api(Foo), data_format(json), transport(dasdasd))]
  |                                                            ^^^^^^^
